Added parts of profile in MainActivity

--- a/app/src/main/res/drawable-nodpi/launch_screen.xml
+++ b/app/src/main/res/drawable-nodpi/launch_screen.xml
@@ -6,8 +6,6 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/gymlogo_round" />
-
+            android:src="@mipmap/gymlogo" />
     </item>
-
 </layer-list>
