--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -4,8 +4,9 @@
         version="1.0.7"
         versioncode="107">
         <change>Offlinemodus</change>
+        <change>Startbildschirm</change>
         <change>Seperate Buttons für gefilterten und ungefilterten Plan</change>
-        <change>Einstellung Wochentage immer anzuzeigen</change>
+        <change>Einstellung Wochentage immer anzuzeigen hinzugefügt</change>
     </release>
     <release
         version="1.0.6"
