--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -30,6 +30,11 @@
 
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_profiles"
+        android:orderInCategory="100"
+        android:title="Profile"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_changelog"
         android:orderInCategory="100"
         android:title="@string/menu_changelog"
