--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -3,9 +3,11 @@
     <release
         version="1.0.7"
         versioncode="107">
-        <change>Profile \u0026 Elternmodus</change>
+        <change>Einzelne Profile</change>
+        <change>Elternmodus</change>
         <change>Offlinemodus</change>
         <change>Startbildschirm</change>
+        <change>Öffis, ColoRush und Formulare Buttons hinzugefügt</change>
         <change>Seperate Buttons für gefilterten und ungefilterten Plan</change>
         <change>Einstellung Wochentage immer anzuzeigen hinzugefügt</change>
     </release>
