--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -32,7 +32,7 @@
     <item
         android:id="@+id/action_profiles"
         android:orderInCategory="100"
-        android:title="Profile"
+        android:title="@string/menu_profiles"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_changelog"
