--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -6,6 +6,7 @@
         <change>Einzelne Profile</change>
         <change>Elternmodus</change>
         <change>Offlinemodus</change>
+        <change>Selbstprogrammierte Notenverwaltung</change>
         <change>Startbildschirm</change>
         <change>Öffis, ColoRush und Formulare Buttons hinzugefügt</change>
         <change>Seperate Buttons für gefilterten und ungefilterten Plan</change>
