--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -61,8 +61,7 @@
                 <item
                     android:id="@+id/nav_shop"
                     android:icon="@drawable/ic_t_shirt"
-                    android:title="@string/menu_shop"
-                    android:visible="false" />
+                    android:title="@string/menu_shop" />
             </group>
         </menu>
     </item>
@@ -94,6 +93,10 @@
                     android:icon="@drawable/ic_colorush2"
                     android:title="@string/menu_colorush" />
                 <item
+                    android:id="@+id/nav_grades"
+                    android:icon="@drawable/ic_looks_one_black_24dp"
+                    android:title="@string/menu_grades" />
+                <item
                     android:id="@+id/nav_notes"
                     android:icon="@drawable/ic_writing"
                     android:title="@string/menu_notes" />
@@ -101,12 +104,6 @@
                     android:id="@+id/nav_timetable"
                     android:icon="@drawable/ic_timetable"
                     android:title="@string/menu_timetable" />
-                <item
-                    android:id="@+id/nav_grades"
-                    android:enabled="false"
-                    android:icon="@drawable/ic_looks_one_black_24dp"
-                    android:title="@string/menu_grades"
-                    android:visible="false" />
             </group>
         </menu>
     </item>
