--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -20,7 +20,7 @@
         <change>Anzeigen ob ein Tag schon vergangen ist</change>
         <change>Änderung der Anzeige auf Wochentage</change>
         <change>Summe der vertretenen Stunden in der Benachrichtigung</change>
-        <change>Senden der Benachrichtigung zu einer festen Zeit (noch nicht voll funktionsfähig)
+        <change>Senden der Benachrichtigung zu einer festen Zeit
         </change>
     </release>
     <release
