--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -65,6 +65,10 @@
             android:title="@string/set_notification_showAlways" />
         <SwitchPreference
             android:defaultValue="false"
+            android:key="two_notifs"
+            android:title="@string/set_two_notifications" />
+        <SwitchPreference
+            android:defaultValue="false"
             android:key="alarm"
             android:title="@string/set_notification_alarm" />
     </PreferenceCategory>
