--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -61,7 +61,8 @@
                 <item
                     android:id="@+id/nav_shop"
                     android:icon="@drawable/ic_t_shirt"
-                    android:title="@string/menu_shop" />
+                    android:title="@string/menu_shop"
+                    android:visible="false" />
             </group>
         </menu>
     </item>
