--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -90,7 +90,8 @@
         <SwitchPreference
             android:defaultValue="false"
             android:key="beta_features"
-            android:title="@string/set_beta_features" />
+            android:title="@string/set_beta_features"
+            app:isPreferenceVisible="false" />
         <SwitchPreference
             android:defaultValue="false"
             android:key="parents"
