--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,7 +16,8 @@
         android:id="@+id/action_refresh2"
         android:orderInCategory="100"
         android:title="@string/action_refresh"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:visible="false" />
     <item
         android:id="@+id/action_update"
         android:orderInCategory="100"
