--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -12,6 +12,7 @@
         <change>Zwei Benachrichtungen für beide Tage</change>
         <change>Seperate Buttons für gefilterten und ungefilterten Plan</change>
         <change>Einstellung Wochentage immer anzuzeigen hinzugefügt</change>
+        <change>Bugfixes</change>
     </release>
     <release
         version="1.0.6"
