--- a/app/src/main/res/layout/fragment_colorush.xml
+++ b/app/src/main/res/layout/fragment_colorush.xml
@@ -85,19 +85,21 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/colorush_image1"
                 android:layout_width="wrap_content"
                 android:layout_height="400dp"
                 android:layout_marginEnd="5dp"
                 android:layout_weight="1"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/colorushboss1" />
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/ic_cloud_download_black_24dp" />
 
             <ImageView
+                android:id="@+id/colorush_image2"
                 android:layout_width="wrap_content"
                 android:layout_height="400dp"
                 android:layout_weight="1"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/colorushchoosing2" />
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/ic_cloud_download_black_24dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -107,19 +109,21 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/colorush_image3"
                 android:layout_width="wrap_content"
                 android:layout_height="400dp"
                 android:layout_marginEnd="5dp"
                 android:layout_weight="1"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/colorushlevel1" />
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/ic_cloud_download_black_24dp" />
 
             <ImageView
+                android:id="@+id/colorush_image4"
                 android:layout_width="wrap_content"
                 android:layout_height="400dp"
                 android:layout_weight="1"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/colorushmenu" />
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/ic_cloud_download_black_24dp" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
