--- a/app/src/main/res/layout/fragment_colorush.xml
+++ b/app/src/main/res/layout/fragment_colorush.xml
@@ -18,7 +18,6 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/menu_colorush"
@@ -32,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:srcCompat="@mipmap/ic_colorush" />
+            app:srcCompat="@mipmap/ic_colorush_icon" />
 
         <TextView
             android:layout_width="match_parent"
