--- a/app/src/main/res/layout/list_profiles_entry.xml
+++ b/app/src/main/res/layout/list_profiles_entry.xml
@@ -25,7 +25,6 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Paul"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textSize="22sp" />
 
@@ -35,8 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center|top"
-                android:paddingBottom="5sp"
-                android:text="6c" />
+                android:paddingBottom="5sp" />
 
         </LinearLayout>
 
