--- a/app/src/main/res/layout/fragment_vertretung.xml
+++ b/app/src/main/res/layout/fragment_vertretung.xml
@@ -3,7 +3,7 @@
     android:id="@+id/vertretung_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground">
+    android:background="?android:attr/windowBackground">
 
 
     <LinearLayout
@@ -12,6 +12,7 @@
         android:paddingEnd="4sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        android:background="?android:attr/windowBackground" />
 
 </FrameLayout>
