--- a/app/src/main/res/layout/list_lehrerliste_entry.xml
+++ b/app/src/main/res/layout/list_lehrerliste_entry.xml
@@ -27,7 +27,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0"
                     android:gravity="center|start"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
@@ -53,7 +53,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:gravity="center|end"
-                            android:textColor="@color/colorBlack"
+                            android:textColor="?android:attr/textColorPrimary"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
@@ -62,7 +62,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:gravity="center|center_horizontal|start"
-                            android:textColor="@color/colorBlack"
+                            android:textColor="?android:attr/textColorPrimary"
                             android:textSize="14sp" />
                     </LinearLayout>
 
@@ -72,7 +72,8 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:visibility="visible" />
+                        android:visibility="visible"
+                        android:textColor="?android:attr/textColorSecondary" />
 
                 </LinearLayout>
 
