--- a/app/src/main/res/layout/list_profiles_entry.xml
+++ b/app/src/main/res/layout/list_profiles_entry.xml
@@ -14,38 +14,38 @@
         app:srcCompat="@drawable/ic_delete_black_24dp" />
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/profilelist_name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/profilelist_courses"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:gravity="center|top"
+            android:paddingBottom="5sp"
+            android:textColor="?android:attr/textColorPrimary" />
 
-            <TextView
-                android:id="@+id/profilelist_name"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="22sp"
-                android:textColor="@color/colorGrey" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/profilelist_courses"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center|top"
-                android:paddingBottom="5sp"
-                android:textColor="@color/colorGrey" />
-
-        </LinearLayout>
-
-        <ImageButton
-            android:id="@+id/profilelist_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/ic_edit_black_24dp" />
+    <ImageButton
+        android:id="@+id/profilelist_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:srcCompat="@drawable/ic_edit_black_24dp" />
 
 
 </LinearLayout>
