--- a/app/src/main/res/layout/list_vertretung_all_entry.xml
+++ b/app/src/main/res/layout/list_vertretung_all_entry.xml
@@ -15,7 +15,7 @@
         android:gravity="center"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/colorGrey" />
+        android:textColor="?android:attr/textColorSecondary" />
 
     <TextView
         android:id="@+id/vertretung_all_entry_textViewHour"
@@ -27,7 +27,7 @@
         android:gravity="center"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/colorGrey" />
+        android:textColor="?android:attr/textColorSecondary" />
 
     <TextView
         android:id="@+id/vertretung_all_entry_textViewSubject"
@@ -39,7 +39,7 @@
         android:gravity="center"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/colorGrey" />
+        android:textColor="?android:attr/textColorSecondary" />
 
     <TextView
         android:id="@+id/vertretung_all_entry_textViewTeacher"
@@ -51,7 +51,7 @@
         android:gravity="center"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/colorGrey" />
+        android:textColor="?android:attr/textColorSecondary" />
 
     <TextView
         android:id="@+id/vertretung_all_entry_textViewRoom"
@@ -63,7 +63,7 @@
         android:gravity="center"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/colorGrey" />
+        android:textColor="?android:attr/textColorSecondary" />
 
     <TextView
         android:id="@+id/vertretung_all_entry_textViewOther"
@@ -73,6 +73,6 @@
         android:layout_weight="@integer/vertretung_all_other"
         android:gravity="center"
         android:textSize="16sp"
-        android:textColor="@color/colorGrey" />
+        android:textColor="?android:attr/textColorSecondary" />
 
 </LinearLayout>
