--- a/app/src/main/res/layout/fragment_thirdchoice.xml
+++ b/app/src/main/res/layout/fragment_thirdchoice.xml
@@ -11,27 +11,25 @@
 
         <Button
             android:id="@+id/choice_button_1"
-            style="@android:style/Widget.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/choice_difference"
-            android:background="@android:color/white"
+            android:background="?android:attr/windowBackground"
             android:text="@string/choice_oberstufe_one" />
 
         <Button
             android:id="@+id/choice_button_2"
-            style="@android:style/Widget.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/choice_difference"
-            android:background="@android:color/white"
+            android:background="?android:attr/windowBackground"
             android:text="@string/choice_oberstufe_two" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/choice_first_difference"
-            android:background="@android:color/white">
+            android:background="?android:attr/windowBackground">
 
             <EditText
                 android:id="@+id/choice_more_course_digits"
