--- a/app/src/main/res/layout/fragment_colorush.xml
+++ b/app/src/main/res/layout/fragment_colorush.xml
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/menu_colorush"
-                android:textColor="@android:color/black"
+                android:textColor="?android:attr/textColorPrimary"
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5sp"
             android:text="@string/colorush_description"
-            android:textColor="@android:color/black"
+            android:textColor="?android:attr/textColorSecondary"
             android:textSize="16sp" />
 
         <LinearLayout
