--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <!--        <item name="android:textColorPrimary">@android:color/white</item>-->
         <!--        <item name="android:textColorSecondary">@android:color/darker_gray</item>-->
-        <item name="android:windowBackground">@android:color/black</item>
+        <!--        <item name="android:windowBackground">@android:color/black</item>-->
         <!--        <item name="android:actionMenuTextAppearance">?android:attr/windowBackground</item>-->
     </style>
 
