--- a/app/src/main/res/drawable/ic_gitlab.xml
+++ b/app/src/main/res/drawable/ic_gitlab.xml
@@ -1,57 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="184dp"
-    android:viewportWidth="494"
-    android:viewportHeight="455">
-    <group>
-        <clip-path android:pathData="M-359,-359L1641,-359L1641,814.333L-359,814.333L-359,-359L-359,-359Z M 0,0" />
-        <path
-            android:pathData="M492.199,260.225L464.64,175.41L410.023,7.313C407.213,-1.335 394.977,-1.335 392.167,7.313L337.548,175.41L156.181,175.41L101.561,7.313C98.752,-1.335 86.516,-1.335 83.705,7.313L29.088,175.41L1.531,260.225C-0.984,267.961 1.771,276.436 8.351,281.217L246.864,454.506L485.379,281.217C491.959,276.436 494.712,267.961 492.199,260.225"
-            android:strokeWidth="1"
-            android:fillColor="#FC6D26"
-            android:fillType="evenOdd"
-            android:strokeColor="#00000000" />
-        <path
-            android:pathData="M246.865,454.506L246.865,454.506L337.549,175.41L156.181,175.41L246.865,454.506L246.865,454.506Z"
-            android:strokeWidth="1"
-            android:fillColor="#E24329"
-            android:fillType="evenOdd"
-            android:strokeColor="#00000000" />
-        <path
-            android:pathData="M246.865,454.506L156.181,175.411L29.089,175.411L246.865,454.506L246.865,454.506Z"
-            android:strokeWidth="1"
-            android:fillColor="#FC6D26"
-            android:fillType="evenOdd"
-            android:strokeColor="#00000000" />
-        <path
-            android:pathData="M29.089,175.411L29.089,175.411L1.53,260.225C-0.983,267.961 1.77,276.436 8.351,281.216L246.865,454.505L29.089,175.411L29.089,175.411Z"
-            android:strokeWidth="1"
-            android:fillColor="#FCA326"
-            android:fillType="evenOdd"
-            android:strokeColor="#00000000" />
-        <path
-            android:pathData="M29.089,175.411L156.181,175.411L101.562,7.314C98.751,-1.336 86.515,-1.336 83.706,7.314L29.089,175.411L29.089,175.411Z"
-            android:strokeWidth="1"
-            android:fillColor="#E24329"
-            android:fillType="evenOdd"
-            android:strokeColor="#00000000" />
-        <path
-            android:pathData="M246.865,454.506L337.549,175.411L464.641,175.411L246.865,454.506L246.865,454.506Z"
-            android:strokeWidth="1"
-            android:fillColor="#FC6D26"
-            android:fillType="evenOdd"
-            android:strokeColor="#00000000" />
-        <path
-            android:pathData="M464.64,175.411L464.64,175.411L492.199,260.225C494.712,267.961 491.959,276.436 485.378,281.216L246.864,454.505L464.64,175.411L464.64,175.411Z"
-            android:strokeWidth="1"
-            android:fillColor="#FCA326"
-            android:fillType="evenOdd"
-            android:strokeColor="#00000000" />
-        <path
-            android:pathData="M464.64,175.411L337.548,175.411L392.167,7.314C394.978,-1.336 407.214,-1.336 410.023,7.314L464.64,175.411L464.64,175.411Z"
-            android:strokeWidth="1"
-            android:fillColor="#E24329"
-            android:fillType="evenOdd"
-            android:strokeColor="#00000000" />
-    </group>
+    android:width="586dp"
+    android:height="559dp"
+    android:viewportWidth="586"
+    android:viewportHeight="559">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m461.48,298.35l-17.78,-54.63a7.72,7.72 0,0 0,-0.43 -1.47l-35.67,-109.8a14.18,14.18 0,0 0,-13.54 -9.67,13.94 13.94,0 0,0 -13.38,9.75l-34,104.63h-107.31l-34.05,-104.63a13.94,13.94 0,0 0,-13.32 -9.75h-0.08a14.22,14.22 0,0 0,-13.5 9.76l-35.7,109.93c0,0.1 -0.08,0.18 -0.11,0.28l-18.1,55.61a20.29,20.29 0,0 0,7.37 22.71l156.38,113.63a8,8 0,0 0,9.45 -0.05l156.41,-113.58a20.28,20.28 0,0 0,7.36 -22.72m-233.75,-45.13l43.59,134.16 -104.64,-134.16m148.05,134.19l41.8,-128.62 1.8,-5.57h61.1l-94.67,121.28m69.44,-231.67l30.63,94.33h-61.31m-22.03,16l-30.37,93.46 -18.12,55.66 -48.42,-149.12m-52.73,-110.33l30.69,94.33h-61.27m-19.98,70.97a4.31,4.31 0,0 1,-1.56 -4.83l13.44,-41.3 98.57,126.37m192.98,-80.24l-110.46,80.21 0.37,-0.48 98.2,-125.86 13.44,41.28a4.31,4.31 0,0 1,-1.55 4.84" />
 </vector>
